# flowest

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  TODO.md  ast-viewer.sh  flowest.opam  flowest.opam.locked  runtest.sh  start.sh
src/ast_viewer/: AstViewer.ml  dune
src/flowest/: Flowest.ml  dune
src/flowest_lib/: FlowestLib.ml  FlowestLib.mli  Mapper.ml  Postprocessor.ml  Preprocessor.ml  Translator.ml  Translator.mli  Utils.ml  Utils.mli  dune
src/ts/: Ast.ml  Generator.ml  Loc.ml  Ts.ml  dune
test/: TestRunner.ml  dune
test/expect/: basic.exp.d.ts  basic.js  class.exp.d.ts  class.js  comments.exp.d.ts  comments.js  declare-var.exp.d.ts  declare-var.js  directives.exp.d.ts  directives.js  export.exp.d.ts  export.js  function.exp.d.ts  function.js  import.exp.d.ts  import.js  interface.exp.d.ts  interface.js  object.exp.d.ts  object.js  raw-ts.exp.d.ts  raw-ts.js  utility.exp.d.ts  utility.js
