opam-version: "2.0"
name: "flowest"
version: "0.0.0"
synopsis: "Convert Flow to TypeScript"
description: "Convert Flow to TypeScript"
maintainer: "Bannerets <comonoid@protonmail.com>"
author: "Bannerets <comonoid@protonmail.com>"
license: "MIT"
homepage: "https://github.com/Bannerets/flowest"
dev-repo: "git+https://github.com/Bannerets/flowest.git"
bug-reports: "https://github.com/Bannerets/flowest/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name]]
depends: [
  "dune" {build & >= "1.0.0"}
  "ocaml" {>= "4.04.1"}
]
